; ModuleID = '/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_kernel.c_callout_init_mtx.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_kernel.c_callout_init_mtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtx = type { i32 }
%struct.callout = type { i32, %struct.mtx* }

@Giant = common dso_local global %struct.mtx zeroinitializer, align 4
@CALLOUT_RETURNUNLOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @callout_init_mtx(%struct.callout* %0, %struct.mtx* %1, i32 %2) #0 {
  %4 = alloca %struct.callout*, align 8
  %5 = alloca %struct.mtx*, align 8
  %6 = alloca i32, align 4
  store %struct.callout* %0, %struct.callout** %4, align 8
  store %struct.mtx* %1, %struct.mtx** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.callout*, %struct.callout** %4, align 8
  %8 = call i32 @memset(%struct.callout* %7, i32 0, i32 16)
  %9 = load %struct.mtx*, %struct.mtx** %5, align 8
  %10 = icmp eq %struct.mtx* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store %struct.mtx* @Giant, %struct.mtx** %5, align 8
  br label %12

12:                                               ; preds = %11, %3
  %13 = load %struct.mtx*, %struct.mtx** %5, align 8
  %14 = load %struct.callout*, %struct.callout** %4, align 8
  %15 = getelementptr inbounds %struct.callout, %struct.callout* %14, i32 0, i32 1
  store %struct.mtx* %13, %struct.mtx** %15, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @CALLOUT_RETURNUNLOCKED, align 4
  %18 = and i32 %16, %17
  %19 = load %struct.callout*, %struct.callout** %4, align 8
  %20 = getelementptr inbounds %struct.callout, %struct.callout* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  ret void
}

declare dso_local i32 @memset(%struct.callout*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
